# smartcar_race

code/: cross.cpp  cross.hpp  debug.cpp  debug.hpp  display.cpp  display.hpp  image_process.cpp  image_process.hpp
user/: CMakeLists.txt  build.sh  main.cpp
图包/半圈赛道图/: Array_forward_bird_col.txt  Array_forward_bird_row.txt
图包/坡道/: Array_forward_bird_row.txt
